--- a/contents/base/{{ prefix-name }}-{{ suffix-name }}/crates/{{ prefix_name }}_{{ suffix_name }}_core/Cargo.toml
+++ b/contents/base/{{ prefix-name }}-{{ suffix-name }}/crates/{{ prefix_name }}_{{ suffix_name }}_core/Cargo.toml
@@ -6,17 +6,18 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-{{ prefix_name }}_{{ suffix_name }}_persistence = { path = "../{{ prefix_name }}_{{ suffix_name }}_persistence" }
+{% if persistence != 'None' %}{{ prefix_name }}_{{ suffix_name }}_persistence = { path = "../{{ prefix_name }}_{{ suffix_name }}_persistence" }
+{% endif %}
 
 anyhow = "1.0"
 prost = "0.9.0"
-serde = {version = "1.0", features = ["serde_derive"] }
+serde = { version = "1.0", features = ["serde_derive"] }
 tonic = "0.6.2"
 tracing = "0.1"
 tracing-attributes = "0.1"
 
 [dev-dependencies]
-tokio = {version = "1.17.0", features = ["rt", "macros"]}
+tokio = { version = "1.17.0", features = ["rt", "macros"] }
 
 [[test]]
 name = "core"
@@ -24,3 +25,4 @@ path = "tests/core/lib.rs"
 
 [build-dependencies]
 tonic-build = "0.6.2"
+
