Incorporate fixes for OOB experience

--- a/contents/base/{{ prefix-name }}-{{ suffix-name }}/crates/{{ prefix_name }}_{{ suffix_name }}_client/Cargo.toml
+++ b/contents/base/{{ prefix-name }}-{{ suffix-name }}/crates/{{ prefix_name }}_{{ suffix_name }}_client/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "{{ prefix_name }}_{{ suffix_name }}_client"
-version = "0.1.0"
+version.workspace = true
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -11,3 +11,4 @@ tonic = "0.6.2"
 
 [build-dependencies]
 tonic-build = "0.6.2"
+
