--- a/contents/base/{{ prefix-name }}-{{ suffix-name }}/.platform/docker/local/Dockerfile
+++ b/contents/base/{{ prefix-name }}-{{ suffix-name }}/.platform/docker/local/Dockerfile
@@ -1,10 +1,8 @@
-FROM lukemathwalker/cargo-chef:latest-rust-1.68.0 AS chef
+FROM lukemathwalker/cargo-chef:latest-rust-1 AS chef
 WORKDIR /build
 
-FROM debian:bullseye-slim
+FROM debian:bookworm-slim
 WORKDIR /app
-RUN apt update && apt-get install libssl-dev libssl1.1 -y
-COPY [".platform/certificates", ".platform/certificates"]
-RUN ls
-COPY target/aarch64-unknown-linux-gnu/debug/platform-application-operator /app/
-ENTRYPOINT ["/app/platform-application-operator"]
+RUN apt-get update && apt-get install --assume-yes libssl-dev ca-certificates
+COPY target/aarch64-unknown-linux-gnu/debug/github-adapter /app/
+ENTRYPOINT ["/app/github-adapter"]
