--- a/contents/base/{{ prefix-name }}-{{ suffix-name }}/.platform/docker/prd/Dockerfile
+++ b/contents/base/{{ prefix-name }}-{{ suffix-name }}/.platform/docker/prd/Dockerfile
@@ -5,20 +5,23 @@ FROM chef AS planner
 COPY . .
 RUN cargo chef prepare --recipe-path recipe.json;
 
-FROM chef AS builder 
+FROM chef AS builder
 COPY --from=planner /app/recipe.json recipe.json
 
 # Install non-cargo dependencies of the build dependencies here.
+# rustfmt is required by tonic-reflection's build script
+RUN rustup component add rustfmt
 
 # Build dependencies - this is the caching Docker layer!
 ARG PROFILE=release
-ENV CARGO_REGISTRIES_P6M_RUN_CREDENTIAL_PROVIDER=cargo:token
-RUN --mount=type=secret,id=p6m-run,env=CARGO_REGISTRIES_P6M_RUN_TOKEN \
-    cargo chef cook --profile $PROFILE --recipe-path recipe.json;
+ENV CARGO_REGISTRIES_YBOR_STUDIO_CREDENTIAL_PROVIDER=cargo:token
+RUN --mount=type=secret,id=ybor-studio,env=CARGO_REGISTRIES_YBOR_STUDIO_TOKEN \
+  cargo chef cook --profile $PROFILE --recipe-path recipe.json;
 
 # Build application
 COPY . .
-RUN cargo build --profile $PROFILE --bin platform-application-operator;
+RUN --mount=type=secret,id=ybor-studio,env=CARGO_REGISTRIES_YBOR_STUDIO_TOKEN \
+  cargo build --profile $PROFILE --bin {{ project-name }};
 
 # We do not need the Rust toolchain to run the binary!
 FROM debian:bookworm-slim AS runtime
@@ -27,5 +30,5 @@ WORKDIR /app
 RUN apt-get update && apt-get install --assume-yes libssl-dev ca-certificates
 
 ARG PROFILE_DIR=release
-COPY --from=builder /app/target/$PROFILE_DIR/platform-application-operator /usr/local/bin
-ENTRYPOINT ["/usr/local/bin/platform-application-operator"]
+COPY --from=builder /app/target/$PROFILE_DIR/{{ project-name }} /usr/local/bin
+ENTRYPOINT ["/usr/local/bin/{{ project-name }}"]
