--- a/contents/base/{{ prefix-name }}-{{ suffix-name }}/crates/{{ prefix_name }}_{{ suffix_name }}_core/Cargo.toml
+++ b/contents/base/{{ prefix-name }}-{{ suffix-name }}/crates/{{ prefix_name }}_{{ suffix_name }}_core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "{{ prefix_name }}_{{ suffix_name }}_core"
-version = "0.1.0"
+version.workspace = true
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -25,4 +25,3 @@ path = "tests/core/lib.rs"
 
 [build-dependencies]
 tonic-build = "0.6.2"
-
