--- a/contents/base/{{ prefix-name }}-{{ suffix-name }}/crates/{{ prefix_name }}_{{ suffix_name }}_server/Cargo.toml
+++ b/contents/base/{{ prefix-name }}-{{ suffix-name }}/crates/{{ prefix_name }}_{{ suffix_name }}_server/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "{{ prefix_name }}_{{ suffix_name }}_server"
-version = "0.1.0"
+version.workspace = true
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -31,4 +31,3 @@ tracing-attributes = "0.1"
 [[test]]
 name = "server"
 path = "tests/server/lib.rs"
-
