--- a/contents/base/{{ prefix-name }}-{{ suffix-name }}/xtask/Cargo.toml
+++ b/contents/base/{{ prefix-name }}-{{ suffix-name }}/xtask/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "xtask"
-version = "0.1.0"
+version.workspace = true
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0"
 clap = { version = "3", default-features = false, features = ["std", "suggestions", "color", "cargo" ] }
+
