--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -26,5 +26,8 @@ jobs:
       - name: Create Release
         uses: archetect-actions/repository-release@v1
         with:
-          release_type: ${{'{'}}{ github.event.inputs.release_type }}
-          github_token: ${{'{'}}{ secrets.GITHUB_TOKEN }}
+          release_type: ${{ github.event.inputs.release_type }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
