--- a/contents/base/{{ prefix-name }}-{{ suffix-name }}/.platform/docker/local/Dockerfile
+++ b/contents/base/{{ prefix-name }}-{{ suffix-name }}/.platform/docker/local/Dockerfile
@@ -4,5 +4,5 @@ WORKDIR /build
 FROM debian:bookworm-slim
 WORKDIR /app
 RUN apt-get update && apt-get install --assume-yes libssl-dev ca-certificates
-COPY target/aarch64-unknown-linux-gnu/debug/github-adapter /app/
-ENTRYPOINT ["/app/github-adapter"]
+COPY target/aarch64-unknown-linux-gnu/debug/{{ project-name }} /app/
+ENTRYPOINT ["/app/{{ project-name }}"]
