--- a/contents/base/{{ prefix-name }}-{{ suffix-name }}/.github/workflows/build.yaml
+++ b/contents/base/{{ prefix-name }}-{{ suffix-name }}/.github/workflows/build.yaml
@@ -7,8 +7,8 @@ on:
 permissions: write-all
 
 env:
-  IMAGE_NAME: github-adapter-server
-  APPLICATION_NAME: github-adapter
+  IMAGE_NAME: {{ project-name }}-server
+  APPLICATION_NAME: {{ project-name }}
 
 jobs:
   # ===========================================================================
