--- a/contents/base/{{ prefix-name }}-{{ suffix-name }}/.github/workflows/promote.yaml
+++ b/contents/base/{{ prefix-name }}-{{ suffix-name }}/.github/workflows/promote.yaml
@@ -42,7 +42,7 @@ jobs:
         uses: p6m-actions/platform-application-manifest-dispatch@v1
         with:
           repository: ${{'{'}}{ github.repository }}
-          image-name: github-adapter
+          image-name: {{ project-name }}
           directory-name: ${{'{'}}{ env.GITHUB_REPOSITORY_BASENAME }}
           environment: ${{'{'}}{ inputs.environment }}
           digest: ${{'{'}}{ env.DIGEST_TO_PROMOTE }}
